syntax = "proto3";

package flashsale;

option go_package = "github.com/titan-commerce/backend/flash-sale-service/api/proto";

import "google/protobuf/timestamp.proto";

service FlashSaleService {
  // Get PoW challenge for anti-bot protection
  rpc GetChallenge(GetChallengeRequest) returns (GetChallengeResponse);
  
  // Attempt purchase with PoW verification
  rpc AttemptPurchase(AttemptPurchaseRequest) returns (AttemptPurchaseResponse);
  
  // Confirm reservation after payment
  rpc ConfirmPurchase(ConfirmPurchaseRequest) returns (ConfirmPurchaseResponse);
  
  // Get active flash sales
  rpc GetActiveFlashSales(GetActiveFlashSalesRequest) returns (GetActiveFlashSalesResponse);
  
  // Get flash sale by ID
  rpc GetFlashSale(GetFlashSaleRequest) returns (FlashSale);
  
  // Create flash sale (admin)
  rpc CreateFlashSale(CreateFlashSaleRequest) returns (FlashSale);
}

message GetChallengeRequest {
  string sale_id = 1;
  string user_id = 2;
}

message GetChallengeResponse {
  string challenge = 1;
  int32 difficulty = 2;
  int64 expires_at = 3;
}

message AttemptPurchaseRequest {
  string sale_id = 1;
  string user_id = 2;
  int32 quantity = 3;
  string challenge = 4;
  string nonce = 5;
}

message AttemptPurchaseResponse {
  string reservation_id = 1;
  google.protobuf.Timestamp expires_at = 2;
  double total_price = 3;
}

message ConfirmPurchaseRequest {
  string reservation_id = 1;
  string user_id = 2;
  string payment_id = 3;
}

message ConfirmPurchaseResponse {
  bool success = 1;
  string order_id = 2;
}

message GetActiveFlashSalesRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetActiveFlashSalesResponse {
  repeated FlashSale sales = 1;
  int32 total = 2;
}

message GetFlashSaleRequest {
  string sale_id = 1;
}

message CreateFlashSaleRequest {
  string product_id = 1;
  double original_price = 2;
  double sale_price = 3;
  int32 total_quantity = 4;
  int32 max_per_user = 5;
  google.protobuf.Timestamp start_time = 6;
  google.protobuf.Timestamp end_time = 7;
}

message FlashSale {
  string id = 1;
  string product_id = 2;
  double original_price = 3;
  double sale_price = 4;
  int32 discount_percent = 5;
  int32 total_quantity = 6;
  int32 sold_quantity = 7;
  int32 remaining_quantity = 8;
  int32 max_per_user = 9;
  string status = 10;
  google.protobuf.Timestamp start_time = 11;
  google.protobuf.Timestamp end_time = 12;
}
